[package]
name = "formy"
version = "0.2.1"
authors = ["Edgar <git@edgarluque.com>"]
edition = "2018"
license = "MIT"
description = "Provides a derive macro to turn structs into html forms."
documentation = "https://docs.rs/formy/"
repository = "https://github.com/edg-l/formy"

[dependencies]
formy_derive = { path = "../formy_derive", version = "0.2.1" }
