[package]
name = "formy_derive"
version = "0.1.0-alpha.0"
authors = ["Edgar <git@edgarluque.com>"]
edition = "2018"
license = "MIT"
description = "Derive macro implementation for 'formy'."

[lib]
proc-macro = true

[dependencies]
quote = "1.0.8"
syn = { version = "1.0.60", features = ["derive", "parsing"] }
