[package]
name = "formy_derive"
version = "0.1.0"
authors = ["Edgar <git@edgarluque.com>"]
edition = "2018"
license = "MIT"
description = "Derive macro implementation for 'formy'."
repository = "https://github.com/edg-l/formy"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
Inflector = "0.11.4"
quote = "1.0.8"
syn = { version = "1.0.60", features = ["derive", "parsing"] }
