[package]
name = "formy_derive"
version = "0.2.1"
authors = ["Edgar <git@edgarluque.com>"]
edition = "2018"
license = "MIT"
description = "Derive macro implementation for 'formy'."
documentation = "https://docs.rs/formy_derive/"
repository = "https://github.com/edg-l/formy"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
Inflector = "0.11.4"
proc-macro-crate = "0.1.5"
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.60", features = ["derive", "parsing"] }
